--- a/atmosphere/20220519_wekeo_webinar/10_sentinel5p_L2_retrieve.ipynb
+++ b/atmosphere/20220519_wekeo_webinar/10_sentinel5p_L2_retrieve.ipynb
@@ -583,7 +583,7 @@
   }
  ],
  "metadata": {
-  "description": "This notebooks shows you how to retrieve Sentinel-5P TROPOMI Level 2 Carbon Monoxide data with the HDA API.",
+  "description": "This notebooks shows you how to retrieve Sentinel-5P TROPOMI Level 2 Nitrogen Dioxide data with the HDA API.",
   "image": "./img/img_01.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -608,9 +608,9 @@
    "level": "L2",
    "satellite": "Sentinel-5P",
    "sensor": "TROPOMI",
-   "variable": "atmosphere_mole_content_of_carbon_monoxide"
+   "variable": "atmosphere_mole_content_of_nitrogen_dioxide"
   },
-  "title": "Retrieve Sentinel-5P TROPOMI Level 2 Carbon Monoxide data"
+  "title": "Retrieve Sentinel-5P TROPOMI Level 2 Nitrogen Dioxide data"
  },
  "nbformat": 4,
  "nbformat_minor": 4
