--- a/atmosphere/20220519_wekeo_webinar/20_CAMS_European_air_quality_forecast_retrieve.ipynb
+++ b/atmosphere/20220519_wekeo_webinar/20_CAMS_European_air_quality_forecast_retrieve.ipynb
@@ -717,8 +717,8 @@
   }
  ],
  "metadata": {
-  "description": "This notebook shows you how to retrieve CAMS European air quality forecast data with the HDA API.",
-  "github": "https://github.com/wekeo/wekeo-jupyter-lab/blob/master/atmosphere/20210506_wekeo_webinar/10_CAMS_European_air_quality_forecast_retrieve.ipynb",
+  "description": "This notebook shows you how to retrieve CAMS European air quality forecast data with the step-by-step usage of the HDA API.",
+  "github": "https://github.com/annaerdmann/wekeo4atmosphere/edit/main/atmosphere/20220519_wekeo_webinar/20_CAMS_European_air_quality_forecast_retrieve.ipynb",
   "image": "./img_07.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -737,7 +737,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
   },
-  "link": "https://jupyterhub-wekeo.apps.eumetsat.dpi.wekeo.eu/hub/user-redirect/lab/tree/public/atmosphere/20210506_wekeo_webinar/10_CAMS_European_air_quality_forecast_retrieve.ipynb",
+  "link": "https://jupyterhub-wekeo.apps.eumetsat.dpi.wekeo.eu/hub/user-redirect/lab/tree/public/atmosphere/20220519_wekeo_webinar/20_CAMS_European_air_quality_forecast_retrieve.ipynb",
   "tags": {
    "category": "retrieve",
    "data": "CAMS European air quality forecast",
@@ -745,7 +745,7 @@
    "service": "Copernicus Atmosphere Monitoring Service",
    "variable": "mass_concentration_of_nitrogen_dioxide_in_air"
   },
-  "title": "Retrieve CAMS European air quality forecast data "
+  "title": "Retrieve CAMS European air quality forecast data"
  },
  "nbformat": 4,
  "nbformat_minor": 4
