--- a/atmosphere/20220519_wekeo_webinar/10_sentinel5p_L2_retrieve.ipynb
+++ b/atmosphere/20220519_wekeo_webinar/10_sentinel5p_L2_retrieve.ipynb
@@ -583,7 +583,9 @@
   }
  ],
  "metadata": {
-  "description": "This notebooks shows you how to retrieve Sentinel-5P TROPOMI Level 2 Carbon Monoxide data with the HDA API.",
+  "author": "Julia Wagemann",
+  "description": "This notebooks shows you how to retrieve Sentinel-5P TROPOMI Level 2 Nitrogen Dioxide data with the HDA API.",
+  "github": "https://github.com/wekeo/wekeo4atmosphere/blob/main/atmosphere/20200519_wekeo_webinar/10_sentinel5p_L2_retrieve.ipynb",
   "image": "./img/img_01.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -602,15 +604,16 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
   },
+  "link": "https://jupyterhub-wekeo.apps.eumetsat.dpi.wekeo.eu/hub/user-redirect/lab/tree/public/atmosphere/20200519_wekeo_webinar/10_sentinel5p_L2_retrieve.ipynb",
   "tags": {
    "category": "retrieve",
    "domain": "atmosphere",
    "level": "L2",
    "satellite": "Sentinel-5P",
    "sensor": "TROPOMI",
-   "variable": "atmosphere_mole_content_of_carbon_monoxide"
+   "variable": "atmosphere_mole_content_of_nitrogen_dioxide"
   },
-  "title": "Retrieve Sentinel-5P TROPOMI Level 2 Carbon Monoxide data"
+  "title": "Retrieve Sentinel-5P TROPOMI Level 2 Nitrogen Dioxide data"
  },
  "nbformat": 4,
  "nbformat_minor": 4
