--- a/atmosphere/20220519_wekeo_webinar/11_sentinel5p_L2_load_browse.ipynb
+++ b/atmosphere/20220519_wekeo_webinar/11_sentinel5p_L2_load_browse.ipynb
@@ -2700,7 +2700,8 @@
   }
  ],
  "metadata": {
-  "description": "This notebooks introduces you to the Sentinel-5P TROPOMI Level 2 Carbon Monoxide data and shows you how you can load, browse and visualize the data.",
+  "description": "This notebooks introduces you to the Sentinel-5P TROPOMI Level 2 Nitrogen Dioxide data and shows you how you can load, browse and visualize the data.",
+  "github": "https://github.com/wekeo/wekeo4atmosphere/blob/main/atmosphere/20220519_wekeo_webinar/11_sentinel5p_L2_load_browse.ipynb",
   "image": "./img/img_02.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -2719,15 +2720,16 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
   },
+  "link": "https://jupyterhub-wekeo.apps.eumetsat.dpi.wekeo.eu/hub/user-redirect/lab/tree/public/atmosphere/20220519_wekeo_webinar/11_sentinel5p_L2_load_browse.ipynb",
   "tags": {
    "category": "discover",
    "domain": "atmosphere",
    "level": "L2",
    "satellite": "Sentinel-5P",
    "sensor": "TROPOMI",
-   "variable": "atmosphere_mole_content_of_carbon_monoxide"
+   "variable": "atmosphere_mole_content_of_nitrogen_dioxide"
   },
-  "title": "Discover Sentinel-5P TROPOMI Level 2 Carbon Monoxide data"
+  "title": "Discover Sentinel-5P TROPOMI Level 2 Nitrogen Dioxide data"
  },
  "nbformat": 4,
  "nbformat_minor": 4
